Refactor File to Path Activate Jenkisfile