@@ -23,17 +23,18 @@ import static org.apache.maven.wrapper.MavenWrapperMain.MVNW_PASSWORD;
 import static org.apache.maven.wrapper.MavenWrapperMain.MVNW_USERNAME;
 
 import java.io.BufferedOutputStream;
-import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.lang.reflect.Method;
 import java.net.Authenticator;
 import java.net.PasswordAuthentication;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Base64;
 
 /**
  * @author Hans Dockter
@@ -81,19 +82,20 @@ public class DefaultDownloader
         }
     }
 
-    public void download( URI address, File destination )
+    @Override
+    public void download( URI address, Path destination )
         throws Exception
     {
-        if ( destination.exists() )
+        if ( Files.exists( destination ) )
         {
             return;
         }
-        destination.getParentFile().mkdirs();
+        Files.createDirectories( destination.getParent() );
 
         downloadInternal( address, destination );
     }
 
-    private void downloadInternal( URI address, File destination )
+    private void downloadInternal( URI address, Path destination )
         throws Exception
     {
         URL url = address.toURL();
@@ -102,7 +104,7 @@ public class DefaultDownloader
         final String userAgentValue = calculateUserAgent();
         conn.setRequestProperty( "User-Agent", userAgentValue );
 
-        try ( OutputStream out = new BufferedOutputStream( new FileOutputStream( destination ) );
+        try ( OutputStream out = new BufferedOutputStream( Files.newOutputStream( destination ) );
               InputStream in = conn.getInputStream() )
         {
             byte[] buffer = new byte[BUFFER_SIZE];
@@ -138,10 +140,7 @@ public class DefaultDownloader
     }
 
     /**
-     * Base64 encode user info for HTTP Basic Authentication. Try to use {@literal java.util.Base64} encoder which is
-     * available starting with Java 8. Fallback to {@literal javax.xml.bind.DatatypeConverter} from JAXB which is
-     * available starting with Java 6 but is not anymore in Java 9. Fortunately, both of these two Base64 encoders
-     * implement the right Base64 flavor, the one that does not split the output in multiple lines.
+     * Base64 encode user info for HTTP Basic Authentication.
      *
      * @param userInfo user info
      * @return Base64 encoded user info
@@ -149,31 +148,7 @@ public class DefaultDownloader
      */
     private String base64Encode( String userInfo )
     {
-        ClassLoader loader = getClass().getClassLoader();
-        try
-        {
-            Method getEncoderMethod = loader.loadClass( "java.util.Base64" ).getMethod( "getEncoder" );
-            Method encodeMethod =
-                loader.loadClass( "java.util.Base64$Encoder" ).getMethod( "encodeToString", byte[].class );
-            Object encoder = getEncoderMethod.invoke( null );
-            return (String) encodeMethod.invoke( encoder, new Object[] { userInfo.getBytes( "UTF-8" ) } );
-        }
-        catch ( Exception java7OrEarlier )
-        {
-            try
-            {
-                Method encodeMethod =
-                    loader.loadClass( "javax.xml.bind.DatatypeConverter" ).getMethod( "printBase64Binary",
-                                                                                      byte[].class );
-                return (String) encodeMethod.invoke( null, new Object[] { userInfo.getBytes( "UTF-8" ) } );
-            }
-            catch ( Exception java5OrEarlier )
-            {
-                throw new RuntimeException( 
-                        "Downloading Maven distributions with HTTP Basic Authentication is not supported on your JVM.",
-                        java5OrEarlier );
-            }
-        }
+        return Base64.getEncoder().encodeToString( userInfo.getBytes( StandardCharsets.UTF_8 ) );
     }
 
     private String calculateUserInfo( URI uri )
